test/types/file/invalidMode.good
invalidMode.chpl:4: error: unresolved enumerated type symbol or call 'type iomode.q'
invalidMode.chpl:4: note: because no functions named q found in scope
